# Inventix

./: pyproject.toml
client/: index.html  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue  main.js
client/src/router/: index.js
client/src/stores/useAuth/: useAuth.js
client/src/views/: 404View.vue  HomeView.vue
client/src/views/AuthView/: AuthView.vue  LoginView.vue  RegisterView.vue
parser/: parser.py
parser/decorators/: parser_dec.py
parser/www/: DreamJob.py  www.py
src/: main.py
src/api/review/: crud.py  dao.py  schemas.py
src/api/site/: crud.py  dao.py
src/api/site_data/: crud.py  dao.py  schemas.py
src/api/user/: crud.py  dao.py  schemas.py
src/core/: config.py  db.py
src/exception/: BaseExeption.py  TokenError.py
src/prisma/: schema.prisma
src/routers/: api_router.py
src/utils/: authentication.py  depends.py
